# zeal

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  Fondo.afdesign  ICON.afdesign  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  Zeal.sln  gitignore  zeal.files  zeal.includes  zeal.vcxproj  zeal.vcxproj.filters  zeal_version.vcxproj  zeal_version.vcxproj.filters
.github/workflows/: build-check.yml  codeql-analysis.yml
.github/workflows/appimage/: action.yml
.qt/: QtDeploySupport-RelWithDebInfo.cmake
_CPack_Packages/win64-Source/7Z/Foxtrot-Zeal-Foxtrot-Zeal V1R-Source/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-Release.cmake
_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
assets/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
assets/freedesktop/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
cmake/: GetVersionFromGit.cmake
src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
src/app/: App.vcxproj  App.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  versioninfo.rc
src/app/App.dir/MinSizeRel/: App.vcxproj.FileListAbsolute.txt  versioninfo.res  zeal.exe.recipe
src/app/resources/browser/: 404.html  welcome.html
src/app/resources/icons/: README.md
src/libs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
src/libs/browser/: Browser.vcxproj  Browser.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
src/libs/browser/Browser_autogen/: mocs_compilation_Debug.cpp
src/libs/browser/MinSizeRel/: Browser.lib
src/libs/core/: Core.vcxproj  Core.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
src/libs/core/Core_autogen/: mocs_compilation_Release.cpp
src/libs/core/MinSizeRel/: Core.lib
src/libs/registry/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Registry.vcxproj  Registry.vcxproj.filters
src/libs/registry/MinSizeRel/: Registry.lib
src/libs/registry/Registry_autogen/: mocs_compilation_Debug.cpp
src/libs/sidebar/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Sidebar.vcxproj  Sidebar.vcxproj.filters
src/libs/sidebar/MinSizeRel/: Sidebar.lib
src/libs/sidebar/Sidebar_autogen/: mocs_compilation_Release.cpp
src/libs/ui/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Ui.vcxproj  Ui.vcxproj.filters  mainwindow.cpp
src/libs/ui/MinSizeRel/: Ui.lib
src/libs/ui/Ui_autogen/: mocs_compilation_MinSizeRel.cpp
src/libs/ui/qxtglobalshortcut/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  QxtGlobalShortcut.vcxproj  QxtGlobalShortcut.vcxproj.filters
src/libs/ui/qxtglobalshortcut/MinSizeRel/: QxtGlobalShortcut.lib
src/libs/ui/widgets/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Widgets.vcxproj  Widgets.vcxproj.filters
src/libs/ui/widgets/MinSizeRel/: Widgets.lib
src/libs/util/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Util.vcxproj  Util.vcxproj.filters  sqlite3.lib
src/libs/util/MinSizeRel/: Util.lib
(+109 files in other folders)
